# miniprojects

./: README.md  calculator.py  passwdgen.sh  ui.md
FOSSfrontend/: style.css  test.html
SystemHealthMoniter/: system-health-gui.sh
ai-hairstyle-tryon/: BRIEF.md  engineering.md  product.md
ai-hairstyle-tryon/backend/: README.md  prompts.py  requirements.txt
ai-hairstyle-tryon/backend/tests/: test_main.py
ai-hairstyle-tryon/frontend/: app.js  style.css
backend/: main.py  pyproject.toml
frontend/: index.html
