[project]
name = "hairstyle-tryon-backend"
version = "0.1.0"
description = "Backend for AI Hairstyle Try-On App"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "google-genai",
    "pillow",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
